--- a/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
+++ b/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
@@ -1,46 +1,60 @@
-<nz-header> Invoices</nz-header>
+<nz-breadcrumb>
+  <nz-breadcrumb-item>Home</nz-breadcrumb-item>
+  <nz-breadcrumb-item>
+    <a routerLink="modules/dashboard">Dashboard</a>
+  </nz-breadcrumb-item>
+  <nz-breadcrumb-item>Invoices</nz-breadcrumb-item>
+</nz-breadcrumb>
+
 <nz-content>
   <button nz-button nzType="primary" (click)="open()" class="mb-1">
     Create
   </button>
   <nz-table
-    #basicTable
-    [nzData]="listOfData"
+  #basicTable
+  [nzData]="invoice_info"
     nzShowPagination
     nzShowSizeChanger
     [nzPageSizeOptions]="[5, 10, 15, 20]"
   >
     <thead>
       <tr>
-        <th>Invoice Id</th>
-        <th>Invoice Title</th>
-        <th>Invoice Description</th>
-        <th>Attachments</th>
+        <th>Sl No</th>
+        <th>Vendor Id</th>
+        <th>Invoice Items</th>
+        <th>Quantity</th>
         <th>Amount</th>
-        <th>Tax Percentage</th>
-        <th>Grand Total</th>
+        <th>Transaction Type</th>
+        <th>Tax</th>
+        <th>Total</th>
+        <th>Department</th>
         <th>Created Date</th>
         <th>Created By</th>
         <th>Updated Date</th>
         <th>Updated By</th>
-        <th>Invoice Details Id</th>
+        
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let data of basicTable.data">
-        <td>{{ data.invoice_id }}</td>
-        <td>{{ data.invoice_title }}</td>
-        <td>{{ data.invoice_description }}</td>
-        <td>{{ data.attachments }}</td>
+        <td>{{ data.invoice_details_id }}</td>
+        <td>{{ data.vendor_id }}</td>
+        <td>{{ data.invoice_item }}</td>
+        <td>{{ data.quantity }}</td>
         <td>{{ data.amount}}</td>
-        <td>{{ data.tax_percentage}}</td>
+        <td>{{ data.trnsx_type}}</td>
+        <td>{{ data.tax}}</td>
+        <td>{{ data.total}}</td>
+        <td>{{ data.department_id}}</td>
         <td>{{ data.created_date}}</td>
         <td>{{ data.created_by}}</td>
         <td>{{ data.updated_date}}</td>
         <td>{{ data.updated_by}}</td>
-        <td>{{ data.invoice_details_id}}</td>
+        
         <td>
-          <button nz-button nzType="primary" (click)="edit(data)">Edit</button>
+          <div class="editbtn">
+            <a (click)="edit(data)">Edit</a> / <a (click)="edit(data)">view</a>
+          </div>
         </td>
       </tr>
     </tbody>
@@ -56,20 +70,119 @@
   (nzOnClose)="close()"
 >
   <form nz-form *nzDrawerContent [formGroup]="invoiceForm">
-    <div *ngFor="let val of formArray">
-        <div>
-          <nz-form-item>
-            <nz-form-label nz-col nzSpan="5" >{{val.label}}</nz-form-label>
-            <nz-form-control nz-col nzSpan="10">
-              <input 
-                nz-input
-                formControlName={{val.control}}
-                placeholder="please enter {{val.holder}}"
-              />
-            </nz-form-control>
-          </nz-form-item>
-        </div>
-  </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Vendor</nz-form-label>
+        <nz-select
+          formControlName="vendor_id"
+          nz-col
+          nzSpan="10"
+          nzPlaceHolder="Vendor"
+          nzShowSearch
+        >
+        <nz-option *ngFor="let v of vendor_array" nzValue={{v.vendor_id}} nzLabel={{v.vendor_id}}></nz-option>
+          
+        </nz-select>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Items</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="invoice_item"
+            placeholder="Enter Invoice Item"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Quantity</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="quantity"
+            placeholder="Enter Quantity"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Amount</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="amount"
+            placeholder="Enter Amount"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Transaction Type</nz-form-label>
+        <nz-select
+          formControlName="trnsx_type"
+          nz-col
+          nzSpan="10"
+          nzPlaceHolder="Transaction Type"
+          nzShowSearch
+        >
+          <nz-option nzValue="debit" nzLabel="Debit"></nz-option>
+          <nz-option nzValue="credit" nzLabel="Credit"></nz-option>
+          <nz-option nzValue="refund" nzLabel="Refund"></nz-option>
+        </nz-select>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Tax</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="tax"
+            placeholder="Enter Tax"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Total</nz-form-label>
+        <nz-form-control nz-col nzSpan="10">
+          <input
+            nz-input
+            formControlName="total"
+            placeholder="Enter Total"
+          />
+        </nz-form-control>
+      </nz-form-item>
+    </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Department</nz-form-label>
+        <nz-select
+          formControlName="department_id"
+          nz-col
+          nzSpan="10"
+          nzPlaceHolder="Department"
+          nzShowSearch
+        >
+        <nz-option *ngFor="let d of depts" nzValue={{d.department_id}} nzLabel={{d.department_name}}></nz-option>
+          
+        </nz-select>
+      </nz-form-item>
+    </div>
     
   </form>
 
