--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.html
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.html
@@ -7,10 +7,14 @@
   <nz-breadcrumb-item>Departments</nz-breadcrumb-item>
 </nz-breadcrumb>
 <nz-content>
-  <nz-input-group >
-    <input type="text" nz-input placeholder="input search text" [(ngModel)]="searchText"/>
-  </nz-input-group>
-  <div class="cbutton">
+
+  <div class="cbutton" >
+    <nz-input-group [nzSuffix]="suffixIconSearch" class="searchInput">
+      <input type="text" nz-input placeholder="Search" [(ngModel)]="searchText"/>
+    </nz-input-group>
+    <ng-template #suffixIconSearch>
+      <span nz-icon nzType="search"></span>
+    </ng-template>
     <button nz-button nzType="default" (click)="open()">Create</button>
   </div>
 
@@ -33,8 +37,8 @@
       </tr>
     </thead>
     <tbody>
-      <tr *ngFor="let data of basicTable.data  | globalTablesearch: searchText ">
-        <td>{{ data.department_id }}</td>
+      <tr *ngFor="let data of basicTable.data| globalTablesearch: searchText, let i=index " >
+        <td>{{ i+1 }}</td>
         <td>{{ data.department_name }}</td>
         <td>{{ data.ranking }}</td>
         <td>{{ data.status }}</td>
@@ -115,7 +119,7 @@
         </nz-select>
       </nz-form-item>
     </div>
-
+<!--
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Department Code</nz-form-label>
@@ -129,7 +133,7 @@
           />
         </nz-form-control>
       </nz-form-item>
-    </div>
+    </div> -->
   </form>
 
   <ng-template #footerTpl>
