changes in invoices and vendors

--- a/Frontend/src/app/modules/invoices/components/invoices/invoices.component.css
+++ b/Frontend/src/app/modules/invoices/components/invoices/invoices.component.css
@@ -1,7 +1,8 @@
 nz-content {
   background: #fff;
   padding: 24px;
-  min-height: 100vh;
+  padding-top: 12px;
+  height: auto;
 }
 nz-header {
   background: none;
@@ -11,10 +12,29 @@ nz-header {
 nz-form-label {
   text-align: left;
 }
-nz-table{
-  overflow-x: scroll;
-}
+
 nz-breadcrumb {
   padding-top: 2px;
   padding-bottom: 5px;
+}
+.editbtn {
+  /* border: 1px solid gray; */
+  width: fit-content;
+}
+
+.editbtn a:hover {
+  color: #1890ff;
+  text-decoration: underline;
+}
+.cbutton {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+::ng-deep .ant-drawer-close {
+  position: fixed;
+  right: 0px;
+}
+.searchInput{
+  width: 200px;
 }
