--- a/Frontend/src/app/layouts/home/home.component.css
+++ b/Frontend/src/app/layouts/home/home.component.css
@@ -106,3 +106,15 @@ scrollbar-width: none;  /* Firefox */
   display: flex;
   flex-direction: column;
 }
+.mr-5 {
+  font-weight: 500;
+}
+
+[nz-icon] {
+  font-size: 15px !important;
+  font-weight: 500 !important;
+}
+
+nz-avatar {
+  margin-right: 0px !important;
+}
