--- a/Frontend/src/styles.css
+++ b/Frontend/src/styles.css
@@ -1,2 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
 @import "~ng-zorro-antd/ng-zorro-antd.css";
+
+.ant-notification-notice-icon {
+    line-height: 0 !important;
+}
