--- a/Frontend/src/app/layouts/home/home.component.css
+++ b/Frontend/src/app/layouts/home/home.component.css
@@ -20,15 +20,15 @@ nz-header {
   z-index: 2;
 }
 .logo {
-  height: 32px;
-  background: rgba(255, 255, 255, 0.2);
-  margin: 16px;
-  /* position: sticky;
-    top: 0; */
+  height: 63px;
+  background: rgb(255, 255, 255);
+  position: sticky;
+    top: 0;
+    z-index: 3;
+    text-align: center;
 }
 .image {
-  height: 40px;
-  width: 40px;
+  height: 60px;
 }
 
 .para {
