--- a/Frontend/src/app/modules/dashboard/components/dashboard/dashboard.component.css
+++ b/Frontend/src/app/modules/dashboard/components/dashboard/dashboard.component.css
@@ -1,3 +1,9 @@
+nz-content {
+  background: none;
+  padding: 5px;
+  min-height: 80vh;
+
+}
 h1{
     font-size:25px;
     text-align: center;
@@ -9,5 +15,21 @@ p{
 }
 .para{
     margin-bottom:0px;
-    
+
+}
+.cards{
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+
+}
+.card{
+  width: 24%;
+  /* margin: 10px; */
+  background-color: none;
+}
+nz-card{
+  /* height:120px; */
+
+  box-shadow: 0px 0px 13px 0px rgb(199, 196, 196);
 }
