--- a/Frontend/src/app/modules/dashboard/components/dashboard/dashboard.component.html
+++ b/Frontend/src/app/modules/dashboard/components/dashboard/dashboard.component.html
@@ -15,31 +15,31 @@
   </div>
 </div> -->
 
-
-<div nz-row class="mt-2">
-    <div nz-col [nzSpan]="6" >
-      <nz-card style="width:270px;height:120px;box-shadow: 0px 0px 13px 0px rgb(199, 196, 196);">
+<nz-content>
+  <div class="mt-2 cards">
+    <div class="card1 card" >
+      <nz-card>
         <p class="text-primary para">{{tender_count}}</p>
         <h1>Total Tenders</h1>
       </nz-card>
     </div>
 
-    <div nz-col [nzSpan]="6" >
-      <nz-card style="width:270px;height:120px;box-shadow: 0px 0px 13px 0px rgb(199, 196, 196);">
+    <div class="card2 card" >
+      <nz-card >
         <p class="text-primary para">{{funds_count}}</p>
         <h1>Funds</h1>
       </nz-card>
     </div>
 
-    <div nz-col [nzSpan]="6" >
-      <nz-card style="width:270px;height:120px;box-shadow: 0px 0px 13px 0px rgb(199, 196, 196);">
+    <div class="card3 card" >
+      <nz-card >
         <p class="text-primary para">{{works_count}}</p>
         <h1>Works</h1>
       </nz-card>
     </div>
-    
-    <div nz-col [nzSpan]="6" >
-      <nz-card style="width:270px;height:120px;box-shadow: 0px 0px 13px 0px rgb(199, 196, 196);">
+
+    <div class="card4 card" >
+      <nz-card >
         <p class="text-primary para">400</p>
         <h1>Approvals</h1>
       </nz-card>
@@ -71,7 +71,7 @@
         </tr>
       </tbody>
     </nz-table>
-    
+
     <ng-template #card_title >
       <div nz-row>
         <div nz-col [nzSpan]="2">
@@ -117,8 +117,11 @@
     </ng-template>
   </div>
 </div>
+</nz-content>
 
-<div class="row">
+
+
+<!-- <div class="row">
   <ul nz-list [nzDataSource]="data" nzBordered nzSize="large" >
     <nz-list-header style="color: #5d78ff;">
       <span class="material-symbols-outlined"> help </span>
@@ -134,4 +137,4 @@
       <span>{{ item.desc }}</span>
     </li>
   </ul>
-</div>
+</div> -->
