--- a/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
+++ b/Frontend/src/app/modules/tender-details/components/tender-details/tender-details.component.html
@@ -19,7 +19,7 @@
 
   <nz-table
     #basicTable
-    [nzData]="tender_info"
+    [nzData]="tenders"
     nzShowPagination
     nzShowSizeChanger
     [nzPageSizeOptions]="[5, 10, 15, 20]"
@@ -29,22 +29,25 @@
         <th>S.No.</th>
         <th>Ticket Description</th>
         <th>Vendor</th>
+        <th>Work</th>
         <th>Location</th>
+        <th>Tender Cost</th>
         <th>Status</th>
-        <th>Department</th>
         <th>Created Date</th>
-        
-        
+
+
       </tr>
     </thead>
     <tbody>
       <tr *ngFor="let data of basicTable.data | globalTablesearch: searchText, let i=index">
         <td>{{ i+1 }}</td>
-        <td>{{ data.department_name }}</td>
-        <td>{{ data.ranking }}</td>
+        <td>{{ data.ticket_description }}</td>
+        <td>{{ data.vendor_name }}</td>
+        <td>{{ data.works }}</td>
+        <td>{{ data.location }}</td>
+        <td>{{ data.tender_cost }}</td>
         <td>{{ data.status }}</td>
         <td>{{ data.created_date }}</td>
-        <td>{{ data.department_code }}</td>
         <td>
           <div class="editbtn">
             <a (click)="edit(data)">Edit</a> / <a (click)="edit(data)">view</a>
@@ -84,11 +87,30 @@
           nzPlaceHolder="Vendor"
           nzShowSearch
         >
-        <nz-option *ngFor="let v of vendor_array" nzValue={{v.vendor_id}} nzLabel={{v.vendor_id}}></nz-option>
-          
+        <nz-option *ngFor="let v of vendors" nzValue={{v.vendor_id}} nzLabel={{v.vendor_name}}></nz-option>
+
         </nz-select>
       </nz-form-item>
     </div>
+
+    <div>
+      <nz-form-item>
+        <nz-form-label nz-col nzSpan="5">Work</nz-form-label>
+        <nz-select
+          nz-col
+          nzSpan="18"
+          nzMode="multiple"
+          nzPlaceHolder="Select Works"
+          formControlName="work_id"
+          >
+          <nz-option
+            *ngFor="let w of works"
+            [nzLabel]="w.work_name"
+            [nzValue]="w.work_id"
+          ></nz-option>
+        </nz-select>
+  </nz-form-item>
+</div>
 
     <div>
       <nz-form-item>
@@ -116,24 +138,6 @@
         </nz-select>
       </nz-form-item>
     </div>
-
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Department</nz-form-label>
-        <nz-select
-          formControlName="department_id"
-          nz-col
-          nzSpan="10"
-          nzPlaceHolder="Department"
-          nzShowSearch
-        >
-        <nz-option *ngFor="let d of departments" nzValue={{d.department_id}} nzLabel={{d.department_name}}></nz-option>
-          
-        </nz-select>
-      </nz-form-item>
-    </div>
-
-
 
     </form>
 
