--- a/Frontend/src/app/modules/payment-proceedings/components/payment-proceedings/payment-proceedings.component.css
+++ b/Frontend/src/app/modules/payment-proceedings/components/payment-proceedings/payment-proceedings.component.css
@@ -2,12 +2,25 @@ nz-content {
   background: #fff;
   padding: 24px;
   min-height: 100vh;
+  padding-top: 12px;
 }
 nz-header {
   background: none;
   font-size: large;
   font-weight: 500;
 }
+nz-breadcrumb {
+  padding-top: 2px;
+  padding-bottom: 5px;
+}
 nz-form-label {
   text-align: left;
+}
+.cbutton {
+  display: flex;
+  justify-content: space-between;
+  margin-bottom: 10px;
+}
+.searchInput{
+  width: 200px;
 }
