tender details changes

--- a/Frontend/src/app/layouts/home/home.component.html
+++ b/Frontend/src/app/layouts/home/home.component.html
@@ -83,7 +83,7 @@
                   >
                 </div>
                 <hr />
-                <a (click)="gotoLogin()" class="text-danger pl-2">LogOut</a>
+                <a (click)="logout()" class="text-danger pl-2">LogOut</a>
               </div>
             </ul>
           </nz-dropdown-menu>
