--- a/Frontend/src/app/modules/department/components/department-list/department-list.component.html
+++ b/Frontend/src/app/modules/department/components/department-list/department-list.component.html
@@ -1,13 +1,12 @@
-<!-- <nz-header> Departments</nz-header> -->
 <nz-breadcrumb>
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
-    <a routerLink="modules/dashboard">Dashboard</a>
+    <a routerLink="/app/modules">Dashboard</a>
   </nz-breadcrumb-item>
   <nz-breadcrumb-item>Departments</nz-breadcrumb-item>
 </nz-breadcrumb>
-<nz-content>
 
+<nz-content>
   <div class="cbutton" >
     <nz-input-group [nzSuffix]="suffixIconSearch" class="searchInput">
       <input type="text" nz-input placeholder="Search" [(ngModel)]="searchText"/>
@@ -15,12 +14,12 @@
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="open()">Create</button>
+    <button nz-button nzType="default" (click)="create()">Create</button>
   </div>
 
   <nz-table
     #basicTable
-    [nzData]="listOfData"
+    [nzData]="departments"
     nzShowPagination
     nzShowSizeChanger
     [nzPageSizeOptions]="[5, 10, 15, 20]"
@@ -61,18 +60,6 @@
   (nzOnClose)="close()"
 >
   <form nz-form *nzDrawerContent [formGroup]="departmentForm">
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Department ID</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
-          <input
-            nz-input
-            formControlName="department_id"
-            placeholder="please enter Department ID"
-          />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Department Name</nz-form-label>
@@ -143,7 +130,7 @@
       <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
         Submit
       </button>
-      <button nz-button *ngIf="!submit" nzType="primary" (click)="update()">
+      <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdate()">
         Update
       </button>
     </div>
