--- a/Frontend/src/app/modules/inventory-items/components/inventory-items/inventory-items.component.html
+++ b/Frontend/src/app/modules/inventory-items/components/inventory-items/inventory-items.component.html
@@ -1,7 +1,7 @@
 <nz-breadcrumb>
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
-    <a routerLink="modules/dashboard">Dashboard</a>
+    <a routerLink="/app/modules">Dashboard</a>
   </nz-breadcrumb-item>
   <nz-breadcrumb-item>Inventory Items</nz-breadcrumb-item>
 </nz-breadcrumb>
@@ -13,7 +13,7 @@
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="open()">Create</button>
+    <button nz-button nzType="default" (click)="create()">Create</button>
   </div>
 
   <nz-table
@@ -42,7 +42,7 @@
         <td>{{ data.price }}</td>
         <td>{{ data.tax }}</td>
         <td>{{ data.created_date  | date : "dd-MM-YYYY hh:mm aaa"}}</td>
-        
+
         <td>
           <div class="editbtn">
             <a (click)="edit(data)">Edit</a> / <a (click)="edit(data)">view</a>
@@ -62,20 +62,6 @@
   (nzOnClose)="close()"
 >
   <form nz-form *nzDrawerContent [formGroup]="inventoryForm">
-    <div>
-      <nz-form-item>
-        <nz-form-label nz-col nzSpan="5">Item ID</nz-form-label>
-        <nz-form-control nz-col nzSpan="10">
-          <input
-          [disabled]="true"
-            nz-input
-            formControlName="item_id"
-            type="number"
-            placeholder="please enter Item ID"
-          />
-        </nz-form-control>
-      </nz-form-item>
-    </div>
     <div>
       <nz-form-item>
         <nz-form-label nz-col nzSpan="5">Item Name</nz-form-label>
@@ -145,7 +131,7 @@
       <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
         Submit
       </button>
-      <button nz-button *ngIf="!submit" nzType="primary" (click)="update()">
+      <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdate()">
         Update
       </button>
     </div>
