--- a/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.css
+++ b/Frontend/src/app/modules/user-accounts/components/user-accounts/user-accounts.component.css
@@ -6,15 +6,17 @@ nz-header {
 nz-content {
   background: #fff;
   padding: 24px;
+  padding-top: 12px;
   min-height: 80vh;
-
+}
+nz-breadcrumb {
+  padding-top: 2px;
+  padding-bottom: 5px;
 }
 nz-form-label{
   margin-bottom:-10px;
 }
-button{
-  margin-top:29px;
-}
+
 nz-form-label::after{
   display: inline-block;
   margin-left: -7px;
@@ -23,10 +25,6 @@ nz-form-label::after{
   font-family: SimSun,sans-serif;
   line-height: 1;
   content: '*';
-}
-.b1{
-  display: flex;
-  justify-content:flex-end;
 }
 nz-form-item{
   margin-bottom:0px;
@@ -48,6 +46,9 @@ nz-form-item{
 }
 .cbutton{
   display: flex;
-  justify-content: flex-end;
+  justify-content: space-between;
   margin-bottom: 10px;
+}
+.searchInput{
+  width: 200px;
 }
