--- a/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
+++ b/Frontend/src/app/modules/invoices/components/invoices/invoices.component.html
@@ -1,7 +1,7 @@
 <nz-breadcrumb>
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
-    <a routerLink="modules/dashboard">Dashboard</a>
+    <a routerLink="/app/modules">Dashboard</a>
   </nz-breadcrumb-item>
   <nz-breadcrumb-item>Invoices</nz-breadcrumb-item>
 </nz-breadcrumb>
@@ -14,7 +14,7 @@
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="open()">Create</button>
+    <button nz-button nzType="default" (click)="create()">Create</button>
   </div>
   <nz-table
   #basicTable
@@ -48,7 +48,7 @@
         <td>{{ data.trnsx_type}}</td>
         <td>{{ data.tax}}</td>
         <td>{{ data.total}}</td>
-        <td>{{ data.department_name}}</td>
+        <td>{{ d_name[data.department_id]}}</td>
         <td>{{ data.created_date | date : "dd-MM-YYYY hh:mm aaa" }}</td>
         <td>
           <div class="editbtn">
@@ -196,7 +196,7 @@
       <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
         Submit
       </button>
-      <button nz-button *ngIf="!submit" nzType="primary" (click)="update()">
+      <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdate()">
         Update
       </button>
     </div>
