--- a/Frontend/src/app/modules/works/components/works/works.component.html
+++ b/Frontend/src/app/modules/works/components/works/works.component.html
@@ -1,7 +1,7 @@
 <nz-breadcrumb>
   <nz-breadcrumb-item>Home</nz-breadcrumb-item>
   <nz-breadcrumb-item>
-    <a routerLink="modules/dashboard">Dashboard</a>
+    <a routerLink="/app/modules">Dashboard</a>
   </nz-breadcrumb-item>
   <nz-breadcrumb-item>Works</nz-breadcrumb-item>
 </nz-breadcrumb>
@@ -14,7 +14,7 @@
     <ng-template #suffixIconSearch>
       <span nz-icon nzType="search"></span>
     </ng-template>
-    <button nz-button nzType="default" (click)="open()">Create</button>
+    <button nz-button nzType="default" (click)="create()">Create</button>
   </div>
   <nz-table
   #basicTable
@@ -81,7 +81,7 @@
     <button nz-button *ngIf="submit" nzType="primary" (click)="onSubmit()">
       Submit
     </button>
-    <button nz-button *ngIf="!submit" nzType="primary" (click)="update()">
+    <button nz-button *ngIf="!submit" nzType="primary" (click)="onUpdate()">
       Update
     </button>
   </div>
